# rust-service-monitoring

./: .travis.yml  Cargo.toml  README.md
docker/: Dockerfile.alpine  Dockerfile.buster
src/: daemon.rs  main.rs
src/messaging/: mailer.rs  message.rs  mod.rs
src/probes/: https.rs  mod.rs  ping.rs
src/tools/: config.rs
tests/ressources/: example.yaml  test-cert.pem  tests.yaml
